--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <div class="flex-end">
+      <div class="flex-end" style="padding-right: 16px">
         <a
           target="_blank"
           href="https://www.facebook.com/The-Falconz-102367932561622"
@@ -19,7 +19,7 @@
         <a
           target="_blank"
           href="https://instagram.com/the_falconz_?igshid=YmMyMTA2M2Y="
-          ><p class="link">finstagram</p></a
+          ><p class="link">instagram</p></a
         >
       </div>
       <div class="flex">
@@ -50,7 +50,6 @@
           allowfullscreen
         ></iframe>
         <div class="medium"><img src="./vinyl.png" /></div>
-        <div class="circle inverted rotating"><img src="./16.png" /></div>
       </div>
 
       <div class="flex-center">
@@ -58,32 +57,46 @@
           <div class="image inverted"><img src="./01.png" /></div>
           <div class="image inverted"><img src="./02.png" /></div>
           <div class="image inverted"><img src="./03.png" /></div>
-          <div class="image inverted"><img src="./12.png" /></div>
+          <div class="image"><img src="./12.png" /></div>
         </div>
         <div class="column">
           <div class="image"><img src="./18.png" /></div>
           <div class="image"><img src="./04.png" /></div>
           <div class="image"><img src="./05.png" /></div>
-          <div class="image inverted"><img src="./06.png" /></div>
-          <div class="image inverted"><img src="./07.png" /></div>
+          <div class="image circle inverted rotating">
+            <img src="./16.png" />
+          </div>
+
           <div class="image inverted"><img src="./13.png" /></div>
           <div class="image inverted"><img src="./16.png" /></div>
           <div class="image inverted"><img src="./15.png" /></div>
         </div>
         <div class="column">
           <div class="image"><img src="./08.png" /></div>
-          <div class="image inverted"><img src="./09.png" /></div>
+          <div class="image"><img src="./09.png" /></div>
           <div class="image inverted"><img src="./10.png" /></div>
           <div class="image inverted"><img src="./11.png" /></div>
         </div>
+        <p class="text"></p>
       </div>
-      <p class="text">
-        from the backrum we entered into the voidz. SEARCH RESULTS FOR “SEARCH:
-        0 RESULTS FOUND FOR "HELLO"” NO SEARCH RESULTS FOUND. TRY ANOTHER SEARCH
-        from the backrum we entered into the voidz. from the backrum we entered
-        into the voidz.
+      <p style="padding-left: 16px">
+        send me mail
+        <a
+          target="_blank"
+          href="mailto: nickmortensen97@gmail.com"
+          class="link"
+          style="font-size: 20px; margin-left: 0"
+          >nickmortensen97@gmail.com</a
+        >
+        | code & drawings by
+        <a
+          target="_blank"
+          href="anetacamo.github.io"
+          class="link"
+          style="font-size: 20px; margin-left: 0"
+          >anetacamo</a
+        >
       </p>
-      <p>send me mail niklas@gmail.com</p>
     </main>
   </body>
 </html>
