--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         | code & drawings by
         <a
           target="_blank"
-          href="anetacamo.github.io"
+          href="https://www.anetacamo.github.io"
           class="link"
           style="font-size: 20px; margin-left: 0"
           >anetacamo</a
