--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
         <a
           target="_blank"
           href="https://www.facebook.com/The-Falconz-102367932561622"
-          ><p class="link">facebook</p></a
         >
+          <img
+            src="./fb.png"
+            class="inverted"
+            style="height: 24px; width: 24px; padding: 16px"
+          />
+        </a>
         <a
           target="_blank"
           href="https://instagram.com/the_falconz_?igshid=YmMyMTA2M2Y="
-          ><p class="link">instagram</p></a
         >
+          <img
+            src="./ig.webp"
+            class="inverted"
+            style="height: 24px; width: 24px; padding: 16px 0px"
+          />
+        </a>
       </div>
       <div class="flex">
         <div class="flex-center">
@@ -38,7 +48,6 @@
         </div>
       </div>
       <div class="center">
-        <h2>from the backroom</h2>
         <iframe
           width="1000"
           class="center"
@@ -49,7 +58,14 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
-        <div class="medium"><img src="./vinyl.png" /></div>
+
+        <div class="medium">
+          <h2>from the backroom</h2>
+          <h2 style="color: blueviolet; padding-bottom: 48px">
+            album out 2022
+          </h2>
+          <img src="./vinyl.png" />
+        </div>
       </div>
 
       <div class="flex-center">
