--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           />
         </a>
       </div>
-      <div class="flex">
+      <div class="flex" style="padding-top: 0">
         <div class="flex-center">
           <div class="image letter inverted"><img src="./letters/t.svg" /></div>
           <div class="image letter inverted"><img src="./letters/h.svg" /></div>
@@ -48,6 +48,7 @@
         </div>
       </div>
       <div class="center">
+        <br /><br /><br /><br />
         <iframe
           width="1000"
           class="center"
@@ -73,43 +74,41 @@
           <div class="image inverted"><img src="./01.png" /></div>
           <div class="image inverted"><img src="./02.png" /></div>
           <div class="image inverted"><img src="./03.png" /></div>
-          <div class="image"><img src="./12.png" /></div>
         </div>
+
         <div class="column">
-          <div class="image"><img src="./18.png" /></div>
+          <div class="image inverted"><img src="./06.png" /></div>
           <div class="image"><img src="./04.png" /></div>
-          <div class="image"><img src="./05.png" /></div>
+
           <div class="image circle inverted rotating">
             <img src="./16.png" />
           </div>
-
           <div class="image inverted"><img src="./13.png" /></div>
           <div class="image inverted"><img src="./16.png" /></div>
           <div class="image inverted"><img src="./15.png" /></div>
         </div>
+
         <div class="column">
-          <div class="image"><img src="./08.png" /></div>
-          <div class="image"><img src="./09.png" /></div>
-          <div class="image inverted"><img src="./10.png" /></div>
           <div class="image inverted"><img src="./11.png" /></div>
         </div>
+
         <p class="text"></p>
       </div>
-      <p style="padding-left: 16px">
-        send me mail
+      <p style="padding-left: 16px; font-size: 16px">
+        email
         <a
           target="_blank"
-          href="mailto: nickmortensen97@gmail.com"
+          href="mailto: saywazzup@thefalconz.com"
           class="link"
-          style="font-size: 20px; margin-left: 0"
-          >nickmortensen97@gmail.com</a
+          style="font-size: 16px; margin-left: 0"
+          >saywazzup@thefalconz.com</a
         >
         | code & drawings by
         <a
           target="_blank"
           href="https://www.anetacamo.github.io"
           class="link"
-          style="font-size: 20px; margin-left: 0"
+          style="font-size: 16px; margin-left: 0"
           >anetacamo</a
         >
       </p>
