--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The Falconz</title>
+
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   </head>
@@ -33,33 +34,58 @@
         </a>
       </div>
       <div class="flex" style="padding-top: 0">
-        <div class="flex-center">
-          <div class="image letter inverted"><img src="./letters/t.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/h.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/e.svg" /></div>
+        <div class="flex-center flex-wrap">
+          <div class="flex-center">
+            <div class="image letter inverted">
+              <img src="./letters/t.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/h.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/e.svg" />
+            </div>
+          </div>
+
           <div class="gap letter"></div>
-          <div class="image letter inverted"><img src="./letters/f.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/a.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/l.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/c.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/o.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/n.svg" /></div>
-          <div class="image letter inverted"><img src="./letters/z.svg" /></div>
+          <div class="flex-center">
+            <div class="image letter inverted">
+              <img src="./letters/f.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/a.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/l.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/c.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/o.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/n.svg" />
+            </div>
+            <div class="image letter inverted">
+              <img src="./letters/z.svg" />
+            </div>
+          </div>
         </div>
       </div>
       <div class="center">
-        <br /><br /><br /><br />
-        <iframe
-          width="1000"
-          class="center"
-          height="700"
-          src="https://www.youtube.com/embed/yn2MbRFMt5o?controls=0&showinfo=0"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen
-        ></iframe>
-
+        <div class="yt">
+          <iframe
+            width="auto"
+            class="center youtube"
+            height="700"
+            src="https://www.youtube.com/embed/yn2MbRFMt5o?controls=0&showinfo=0"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
         <div class="medium">
           <h2>from the backroom</h2>
           <h2 style="color: blueviolet; padding-bottom: 48px">
@@ -69,7 +95,7 @@
         </div>
       </div>
 
-      <div class="flex-center">
+      <div class="flex-center flex-wrap">
         <div class="column">
           <div class="image inverted"><img src="./01.png" /></div>
           <div class="image inverted"><img src="./02.png" /></div>
