--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="center">
         <div class="yt">
           <iframe
-            width="auto"
+            width="100%"
             class="center youtube"
             height="700"
             src="https://www.youtube.com/embed/yn2MbRFMt5o?controls=0&showinfo=0"
@@ -92,6 +92,7 @@
             album out 2022
           </h2>
           <img src="./vinyl.png" />
+          <div class="inverted"><img src="./06.png" /></div>
         </div>
       </div>
 
@@ -103,7 +104,6 @@
         </div>
 
         <div class="column">
-          <div class="image inverted"><img src="./06.png" /></div>
           <div class="image"><img src="./04.png" /></div>
 
           <div class="image circle inverted rotating">
