added google analytics

--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    G-8N7XDV3JVJ
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="description" content="Free Web tutorials" />
+    <meta name="author" content="John Doe" />
+    <meta property="og:title" content="The Rock" />
+    <meta property="og:type" content="video.movie" />
+    <meta
+      property="og:description"
+      content="Offering tour packages for individuals or groups."
+    />
+    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
+    <meta
+      property="og:image"
+      content="https://ia.media-imdb.com/images/rock.jpg"
+    />
+    <meta name="twitter:title" content="European Travel Destinations " />
+    <meta
+      name="twitter:description"
+      content=" Offering tour packages for individuals or groups."
+    />
+    <meta
+      name="twitter:image"
+      content=" http://euro-travel-example.com/thumbnail.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The Falconz</title>
 
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-8N7XDV3JVJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-8N7XDV3JVJ");
+    </script>
   </head>
   <body>
     <main>
