--- a/index.html
+++ b/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    G-8N7XDV3JVJ
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="description" content="Free Web tutorials" />
+    <meta
+      name="keywords"
+      content="rock music, nick sway, indie rock, danish musician"
+    />
+    <meta
+      name="description"
+      content="Danish rock act The Falconz releasing new album 'From the backroom' 2022 based in Aarhus"
+    />
     <meta name="author" content="John Doe" />
-    <meta property="og:title" content="The Rock" />
-    <meta property="og:type" content="video.movie" />
+    <meta property="og:title" content="The Falconz" />
     <meta
       property="og:description"
-      content="Offering tour packages for individuals or groups."
+      content="Danish rock act The Falconz releasing new album 'From the backroom' 2022 based in Aarhus"
     />
-    <meta property="og:url" content="https://www.imdb.com/title/tt0117500/" />
-    <meta
-      property="og:image"
-      content="https://ia.media-imdb.com/images/rock.jpg"
-    />
-    <meta name="twitter:title" content="European Travel Destinations " />
+    <meta property="og:url" content="https://thefalconz.com" />
+    <meta property="og:image" content="https://thefalconz.com/vinyl.png" />
+    <meta name="twitter:title" content="The Falconz" />
     <meta
       name="twitter:description"
-      content=" Offering tour packages for individuals or groups."
+      content="Danish rock act The Falconz releasing new album 'From the backroom' 2022 based in Aarhus"
     />
-    <meta
-      name="twitter:image"
-      content=" http://euro-travel-example.com/thumbnail.jpg"
-    />
+    <meta name="twitter:image" content="https://thefalconz.com/vinyl.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>The Falconz</title>
