--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
         email
         <a
           target="_blank"
-          href="mailto: saywazzup@thefalconz.com"
+          href="mailto: nickmortensen97@gmail.com"
           class="link"
           style="font-size: 16px; margin-left: 0"
-          >saywazzup@thefalconz.com</a
+          >nickmortensen97@gmail.com</a
         >
         | code & drawings by
         <a
